# byo-browser

./: Cargo.toml  index.html
html/: link1.html
public/: index.html  link1.html  link2.html
src/: css.rs  helper.rs  html.rs  main.rs  process.rs
