[package]
name = "byo-browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
skia-safe = "0.80.1"
softbuffer = "0.4.6"
tokio = { version = "1.42.0", features = ["full"] }
winit = "0.30.7"
